added login styles

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <title>Home</title>
   </head>
-  <body>
+  <body class="home">
     <%- include('./partials/header') %>
     <main></main>
     <footer></footer>
