--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -4,10 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheets/styles.css" />
+
+    <!-- boostrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!-- boostrap -->
+
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
     <title>Iniciar Sesión</title>
   </head>
-  <body>
-    <h1>hola</h1>
+  <body class="login">
+    <main>
+      <form class="form-login">
+        <div class="form-header">
+          <h1 class="form-brand">Xml Editor App</h1>
+        </div>
+        <div class="form-main">
+          <div class="mb-3 container-input">
+            <label for="user" class="form-label">Usuario</label>
+            <input
+              type="email"
+              class="form-control"
+              id="user"
+              aria-describedby="emailHelp"
+            />
+          </div>
+          <div class="mb-3 container-input">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="password" />
+            <button id="eye-pass" class="eye-pass pass-off" value="0"></button>
+          </div>
+          <div>
+            <p class="error is-invalid">
+              Credenciales invalidas
+              <img src="/images/error.svg" alt="error" width="6%" />
+            </p>
+          </div>
+          <button type="submit" class="btn btn-primary submit-button">
+            Iniciar Sesión
+          </button>
+        </div>
+      </form>
+    </main>
+    <!-- boostrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <!-- boostrap -->
+    <script src="/javascripts/index.js"></script>
+    <script src="/javascripts/login.js"></script>
   </body>
 </html>
