--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -23,7 +23,7 @@
           </li>
         </ul>
         <div class="container-auth-options">
-          <button type="button" class="btn btn-primary">Cerrar Sesión</button>
+          <a href="/auth/logOut" class="btn btn-primary">Cerrar Sesión</a>
         </div>
       </div>
     </div>
