added more methods in xml service for modify xml file and create routes and views for create fuction

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -45,7 +45,7 @@
           </div>
           <div>
             <%if(locals.error){%>
-            <p class="is-invalid">
+            <p class="is-invalid-login">
               <%=locals.error%>
               <img src="/images/error.svg" alt="error" width="6%" />
             </p>
