--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -17,9 +17,7 @@
       <div class="collapse navbar-collapse navBar-custom" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"
-              >Crear Nodo</a
-            >
+            <a class="nav-link active" href="/nodes/create">Crear Nodo</a>
           </li>
         </ul>
         <div class="container-auth-options">
