--- a/app/public/stylesheets/home.css
+++ b/app/public/stylesheets/home.css
@@ -16,6 +16,7 @@
   padding: 15px;
   width: 300px;
   margin: 20px 5px;
+  box-shadow: 0px 4px 10px 1px rgb(70 64 64);
 }
 
 .home .card-nodo .edit-button {
