--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,10 +29,10 @@
             <input
               type="text"
               class="form-control"
-              id="name"
-              name="name"
+              id="Name"
+              name="Name"
               disabled
-              value="<%=nodo.name%>"
+              value="<%=nodo.Name%>"
             />
           </div>
 
@@ -53,10 +53,10 @@
             <input
               type="text"
               class="form-control"
-              id="scale"
-              name="scale"
+              id="Scale"
+              name="Scale"
               disabled
-              value="<%=nodo.scale%>"
+              value="<%=nodo.Scale%>"
             />
           </div>
 
