--- a/app/public/stylesheets/home.css
+++ b/app/public/stylesheets/home.css
@@ -9,7 +9,10 @@
 }
 
 .home .main-home .container-nodos-title {
-  margin-bottom: 30px;
+  margin: 0px 5px 20px;
+  padding: 5px;
+  background-color: white;
+  box-shadow: 0px 6px 6px 0px rgb(70 64 64);
 }
 
 .home .card-nodo {
