--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,43 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- boostrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!-- boostrap -->
+
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
+
+    <title>Error <%=error.status%></title>
+  </head>
+  <body class="error-page">
+    <h1 class="error-status"><%=error.status%></h1>
+    <p class="error-message"><%=error.message%></p>
+    <p class="error-text">Volver al <a href="/">Home</a></p>
+    <%if(error.stack){%>
+    <p
+      class="alert alert-danger"
+      style="width: 90%; margin: 0px auto 0px auto !important; text-align: left"
+      role="alert"
+    >
+      <%=error.stack%>
+    </p>
+    <%}%>
+
+    <!-- boostrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <!-- boostrap -->
+  </body>
+</html>
