--- a/views/createForm.ejs
+++ b/views/createForm.ejs
@@ -20,7 +20,12 @@
   <body class="create">
     <%- include('./partials/header.ejs')%>
     <main class="create-main">
-      <form class="create-form" action="/nodes/create" method="POST">
+      <form
+        id="formCreate"
+        class="create-form"
+        action="/nodes/create"
+        method="POST"
+      >
         <h1 class="create-title">Crear nodo :</h1>
         <div class="mb-3">
           <label for="name" class="form-label">Nombre</label>
@@ -62,7 +67,7 @@
           <label for="Scale" class="form-label">escala</label>
           <input
             type="text"
-            class="form-control <%=locals.errors && errors.scale ? 'is-invalid' : null%>"
+            class="form-control <%=locals.errors && errors.Scale ? 'is-invalid' : null%>"
             id="Scale"
             name="Scale"
             placeholder="Ejemplo : 1.2"
@@ -78,7 +83,11 @@
         </div>
 
         <div class="container-form-buttons">
-          <button type="submit" class="btn btn-primary create-button">
+          <button
+            id="submit-create"
+            type="submit"
+            class="btn btn-primary create-button"
+          >
             Crear
           </button>
           <a href="/" class="btn btn-danger">Cancelar</a>
@@ -93,5 +102,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- boostrap -->
+
+    <script src="/javascripts/index.js"></script>
+    <script src="/javascripts/create.js"></script>
   </body>
 </html>
