--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -22,8 +22,14 @@
   box-shadow: 0px 4px 10px 1px rgb(70 64 64);
 }
 
-.home .card-nodo .edit-button {
+.home .card-nodo .container-card-butons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.home .card-nodo .options-buttons {
   margin: 10px 0px 15px 0px;
+  width: 100px;
 }
 
 @media (min-width: 768px) {
